@@ -15,10 +15,17 @@ public class RoomList {
         if (rooms.isEmpty()) {
             rooms.add(new DungeonRoom("basic", RoomType.FOUR_WAY, RoomGroup.STONE_BRICK));
             rooms.add(new DungeonRoom("basic", RoomType.ENTRANCE, RoomGroup.STONE_BRICK));
-            rooms.add(new DungeonRoom("boss", RoomType.END, RoomGroup.STONE_BRICK));
+            rooms.add(new DungeonRoom("boss", RoomType.END, RoomGroup.STONE_BRICK).isBoss());
             rooms.add(new DungeonRoom("parkour", RoomType.TRIPLE_HALLWAY, RoomGroup.STONE_BRICK));
             rooms.add(new DungeonRoom("basic", RoomType.CURVED_HALLWAY, RoomGroup.STONE_BRICK));
             rooms.add(new DungeonRoom("basic", RoomType.STRAIGHT_HALLWAY, RoomGroup.STONE_BRICK));
+
+            rooms.add(new DungeonRoom("simple_trap0", RoomType.CURVED_HALLWAY, RoomGroup.STONE_BRICK));
+            rooms.add(new DungeonRoom("simple_prison0", RoomType.END, RoomGroup.STONE_BRICK));
+            //rooms.add(new DungeonRoom("basic", RoomType.ENTRANCE, RoomGroup.STONE_BRICK));
+            rooms.add(new DungeonRoom("simple0", RoomType.FOUR_WAY, RoomGroup.STONE_BRICK));
+            rooms.add(new DungeonRoom("simple0", RoomType.STRAIGHT_HALLWAY, RoomGroup.STONE_BRICK));
+            rooms.add(new DungeonRoom("simple_maze0", RoomType.TRIPLE_HALLWAY, RoomGroup.STONE_BRICK));
 
             rooms.add(new DungeonRoom("simple_prismarine", RoomType.FOUR_WAY, RoomGroup.MISC));
             rooms.add(new DungeonRoom("prismarine", RoomType.ENTRANCE, RoomGroup.MISC));
@@ -29,14 +36,14 @@ public class RoomList {
 
             rooms.add(new DungeonRoom("sewers", RoomType.FOUR_WAY, RoomGroup.MISC));
             rooms.add(new DungeonRoom("sewers", RoomType.ENTRANCE, RoomGroup.MISC));
-            rooms.add(new DungeonRoom("sewers_treasure", RoomType.END, RoomGroup.MISC));
+            rooms.add(new DungeonRoom("sewers_treasure", RoomType.END, RoomGroup.MISC).weight(300));
             rooms.add(new DungeonRoom("sewers_puzzle_easy", RoomType.TRIPLE_HALLWAY, RoomGroup.MISC));
             rooms.add(new DungeonRoom("sewers", RoomType.CURVED_HALLWAY, RoomGroup.MISC));
             rooms.add(new DungeonRoom("sewers", RoomType.STRAIGHT_HALLWAY, RoomGroup.MISC));
 
             rooms.add(new DungeonRoom("trap", RoomType.FOUR_WAY, RoomGroup.SANDSTONE));
             rooms.add(new DungeonRoom("basic", RoomType.ENTRANCE, RoomGroup.SANDSTONE));
-            rooms.add(new DungeonRoom("boss", RoomType.END, RoomGroup.SANDSTONE));
+            rooms.add(new DungeonRoom("boss", RoomType.END, RoomGroup.SANDSTONE).isBoss());
             rooms.add(new DungeonRoom("cactus", RoomType.TRIPLE_HALLWAY, RoomGroup.SANDSTONE));
             rooms.add(new DungeonRoom("prison", RoomType.CURVED_HALLWAY, RoomGroup.SANDSTONE));
             rooms.add(new DungeonRoom("puzzle0", RoomType.STRAIGHT_HALLWAY, RoomGroup.SANDSTONE));
